@@ -73,6 +73,6 @@ DIST netbeans-websvc-6.0.tar.bz2 21262337 RMD160 aa0eea92a59cad8c5907c9a5be41a1a
 DIST netbeans-xml-6.0.tar.bz2 4404173 RMD160 6360765b44e988fb1ad4e529630ac1abbc4dae9d SHA1 92f489b03154a8153f8508387886afb9fbfa1959 SHA256 5d63287da3cfc42cbfb24ab619d1e96ff625124e1225c5377aa5d8c22deaecd9
 EBUILD netbeans-6.0.ebuild 32690 RMD160 53bf60c90e06f5fbb4b08a2363e750abf0a1b563 SHA1 9725266d8090a628691fa55fa179d5f8c72a3799 SHA256 a663b402ecd295ed316307b1be3772781e9f87c4013f6b1670a1ce1ca99d7669
 EBUILD netbeans-6.1-r1.ebuild 16545 RMD160 ae5471ae840869fbc962fceb48f8ee811efae729 SHA1 d4782ff9271907bbb98e64029be47bfce3d8677a SHA256 b5ffe94c7e7f66a7981c076c54fdc847a5773f4cf890c789935fbaee07299c2e
-EBUILD netbeans-6.5_beta.ebuild 18388 RMD160 c545a23a561096153c434efee3fbbb6facaa1ba6 SHA1 6aa12c054bfd434c6823690fb3554baa0dfefc35 SHA256 56ee37952e3e09f1e4caf9f3f1d0eb10339c823aa3a7d47c21c7e3f22a08882c
-MISC ChangeLog 24289 RMD160 e5e0beb39ef5ccc0912463b356b7b9538a42662d SHA1 50c4cc4aa47ee6e643745484e1260f993ab90563 SHA256 bee563725ba87d3364402e29987f1ac96302849b60aa760e0f896bc2357ad337
+EBUILD netbeans-6.5_beta.ebuild 19426 RMD160 b598a40334729d587039e890ed56dc15507d3729 SHA1 31975184dfb6995dae68cb5058ab62649208e2d1 SHA256 408a1e4069e005071c45971a9360e7f82312a8781f3d43cc3f61302c855e5505
+MISC ChangeLog 24424 RMD160 2224d2c8f5cf40680f1af61dda5e542cf2cea8a4 SHA1 57c47b0c325c83d913c4c5d52db7a1b515fa7681 SHA256 192c58c1620c3793e1e8c6aaae8b1bce2f033e667c2af10684d8761d892ca5e9
 MISC metadata.xml 1128 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd SHA1 997b3db42167a9e591c3667ffddd125bbb85fa98 SHA256 8c524b060fdbfc4aa432a528c2e78ad05eb20fcf4bc8973c1c8366699bb90b5a
